@@ -19,13 +19,13 @@ namespace ACE
       , Windows_Multi_Instance_Monitor (
           ACE_TEXT ("\\Network Interface(*)\\Packets Sent/sec"))
 #elif defined (linux) || defined (AIX)
-        , Linux_Network_Interface_Monitor (
+      , Linux_Network_Interface_Monitor (
             " %*[^:]: %*u %*u %*u %*u %*u %*u %*u %*u %*u %lu")
             /// Scan format for /proc/net/dev
 #elif defined (ACE_HAS_KSTAT)
-        , Solaris_Network_Interface_Monitor (ACE_TEXT ("opackets"))
+      , Solaris_Network_Interface_Monitor (ACE_TEXT ("opackets"))
 #elif defined (__FreeBSD__) || defined (__NetBSD__) || defined (__OpenBSD__)
-        , BSD_Network_Interface_Monitor (ACE_TEXT ("opackets"))
+      , BSD_Network_Interface_Monitor (ACE_TEXT ("opackets"))
 #endif
     {}
 
