@@ -1,3 +1,12 @@
+Tue Jul  1 12:29:34 UTC 2008  Jeff Parsons <j.parsons@vanderbilt.edu>
+
+        * ace/Monitor_Control/Bytes_Received_Monitor.cpp:
+        * ace/Monitor_Control/Packets_Received_Monitor.cpp:
+        * ace/Monitor_Control/Bytes_Sent_Monitor.cpp:
+        * ace/Monitor_Control/Packets_Sent_Monitor.cpp:
+        
+          Cosmetic changes.
+
 Mon Jun 30 16:50:05 UTC 2008  Chad Elliott  <elliott_c@ociweb.com>
 
         * ace/Process.h:
